Ajout de AuthenticationFilter

--- a/ecole_simulation/src/main/webapp/index.html
+++ b/ecole_simulation/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Bienvenue à l'école</h1>
     <p>Cette application simule le fonctionnement simplifié d'une école.</p>
-    <p>Vous pouvez accéder aux fonctionnalités en utilisant les liens suivants :</p>
+    <p>Vous pouvez accéder aux fonctionnalités en utilisant le lien suivant :</p>
     <ul>
         <li><a href="login.html">Se connecter</a></li>
         <!-- Ajoutez d'autres liens vers les fonctionnalités principales de votre application -->
