Réalisation de admin.jsp, login.html, error.jsp

--- a/ecole_simulation/src/main/webapp/login.html
+++ b/ecole_simulation/src/main/webapp/login.html
@@ -17,7 +17,7 @@
         <input type="password" id="password" name="password"><br><br>
         <input type="submit" value="Se connecter">
     </form>
-    <p>Pour vous connecter en tant qu'administrateur, utilisez les identifiants suivants :</p>
+    <p>Pour vous connecter en tant qu'administrateur, essayez les identifiants par défaut suivants :</p>
     <p>Identifiant : admin</p>
     <p>Mot de passe : admin</p>
 </body>
