Ajout de Welcome-file, web xml

--- a/ecole_simulation/src/main/webapp/login.html
+++ b/ecole_simulation/src/main/webapp/login.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Bienvenue à l'école</h1>
     <p>Cette application simule le fonctionnement simplifié d'une école.</p>
+    <hr>
     <p>Vous pouvez accéder aux fonctionnalités en utilisant le formulaire de connexion ci-dessous :</p>
+	
     <h2>Connexion</h2>
     <form action="AuthenticationFilter" method="post">
         <label for="username">Nom d'utilisateur:</label><br>
@@ -17,8 +19,8 @@
         <input type="password" id="password" name="password"><br><br>
         <input type="submit" value="Se connecter">
     </form>
-    <p>Pour vous connecter en tant qu'administrateur, essayez les identifiants par défaut suivants :</p>
-    <p>Identifiant : admin</p>
-    <p>Mot de passe : admin</p>
+    <p>Pour vous connecter par défaut, essayez les identifiants par défaut suivants :</p>
+    <p>Identifiant : admin ou directeur ou enseignant</p>
+    <p>Mot de passe : admin ou directeur ou enseignant (--respectivement)</p>
 </body>
 </html>
